# pythonwithcpp

./: .gitignore  README.md  main.py  pyproject.toml
docs/: prime.md
tests/: test_c_hello.py  test_c_prime.py  test_cpp_hello.py  test_cpp_prime.py  test_python_hello.py  test_python_prime.py
