[project]
name = "pythonwithcpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "Cython>=3.1.3",
    "pybind11>=3.0.0",
    ]

[tool.uv]
dev-dependencies = [
    "cython>=3.1.3",
    "pybind11>=3.0.0",
    "pythonpkg",
    "cpppkg",
]

[tool.setuptools.packages.find]
where = ["packages"] 

[tool.setuptools.package-dir]
"" = "packages" 


[tool.uv.sources]
pythonpkg = { path = "packages/pythonpkg", editable = true }
cpppkg = { path = "packages/cpppkg", editable = true }